@@ -12,7 +12,7 @@ require "fairy/share/base-app"
 require "fairy/share/conf"
 require "fairy/share/locale"
 require "fairy/share/encoding"
-require "fairy/main/master"
+require "fairy/master"
 
 $0 = "fairy master #{ARGV.join(' ')}"
 
