@@ -15,9 +15,9 @@ CONF.MASTER_HOST = NO SYSTEM DEFAULT VALUE
 ##CONF.HOME = ENV["FAIRY_HOME"]
 ##CONF.BIN = CONF.HOME+"/bin" 
 ##CONF.LIB = CONF.HOME+"/lib"
-##CONF.LIB_APP = CONF.LIB+"/app"
-##CONF.CONTROLLER_APP = CONF.LIB_APP+"/controller"
-##CONF.PROCESSOR_APP = CONF.LIB_APP+"/processor"
+##CONF.SUBCMD = CONF.BIN+"/subcmd"
+##CONF.CONTROLLER_BIN = CONF.SUBCMD+"/controller"
+##CONF.PROCESSOR_BIN = CONF.SUBCMD+"/processor"
 
 ##CONF.DEFAULT_EXTERNAL = nil
 ##CONF.DEFAULT_INTERNAL = nil
